--- a/form/templates/form/homepage.html
+++ b/form/templates/form/homepage.html
@@ -1,9 +1,9 @@
-{% extends "form/startnav.html" %}
+{% extends 'form/base.html' %}
 {% load static %}
 {% block content %}
-  
-    <div class="p-5 text-center bg-image" style="background-image: url('{% static 'images/doc1.jpg' %}');
-    height: 100%;">
+ 
+  <div class="p-5 text-center bg-image" style="background-image: url('{% static 'images/hos1.jpg' %}');
+      height: 400px;">
     
     <div class="mask" style="background-color: rgba(0, 0, 0, 0.6)">
       <div class="d-flex justify-content-center align-items-center h-100">
@@ -13,4 +13,9 @@
       </div>
     </div>
   </div>
+
+<div class="container">
+  <h3 style="text-align: center; background-color ='black';">Form3C+ is for medics</h3> 
+
+</div> 
 {% endblock content %}
